#6064 z-index issue on front end

--- a/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
@@ -140,6 +140,7 @@
                 padding: 0;
             }
             .slick-dots{
+                z-index: 1;
                 bottom: 50px !important;
                 margin: 0 !important;
                 li button:before{
